--- a/VideoEncoder/config.env.example
+++ b/VideoEncoder/config.env.example
@@ -15,19 +15,19 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 # Basics #
-API_ID =
-API_HASH = ""
-BOT_TOKEN = ""
+API_ID = "4632149"
+API_HASH = "75667792197900fc111496501a1d1def"
+BOT_TOKEN = "2058652925:AAEJo70JBOpm9tv6vi3BNAXPQLkKeXkw5mQ"
 
 # Authorization #
 SUDO_USERS = "" # List of sudo user's id, separated by space.
 
 # Encode Settings #
-PRESET = "sf"
-TUNE = "film"
+PRESET = "vf"
+TUNE = "animation"
 AUDIO = "opus"
 
 # Optional #
-UPLOAD_AS_DOC = False
+UPLOAD_AS_DOC = True
 DOWNLOAD_DIR = "VideoEncoder/utils/downloads/"
 ENCODE_DIR = "VideoEncoder/utils/encodes/"
