--- a/VideoEncoder/config.env.example
+++ b/VideoEncoder/config.env.example
@@ -20,7 +20,7 @@ API_HASH = "75667792197900fc111496501a1d1def"
 BOT_TOKEN = "2058652925:AAEJo70JBOpm9tv6vi3BNAXPQLkKeXkw5mQ"
 
 # Authorization #
-SUDO_USERS = "" # List of sudo user's id, separated by space.
+SUDO_USERS = "1380685014 917790252" # List of sudo user's id, separated by space.
 
 # Encode Settings #
 PRESET = "vf"
